Some contents and animation, especially, scrollUP button has been modified. Brief summary has been added to Readme file

--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -20,7 +20,7 @@
             <li><a class="links" href="/Html files/about.html">About</a></li>
             <li><a class="links" href="/Html files/products.html">Products</a></li>
             <li><a class="links active" href="/Html files/contact.html">Log in</a></li>
-            <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
+            <li><a class="link-icon" href="" onclick="shop()"><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
     </nav>
 
@@ -59,12 +59,12 @@
 
     <section class="wrapper reveal">
         <div class="modalForm">
-            <div class="actionBtns">
+            <div class="actionBtns reveal">
                 <button class="actionBtn signupBtn">Singup</button>
                 <button class="actionBtn loginBtn">Login</button>
                 <button class="moveBtn rightBtn">Singup</button>
             </div>
-            <div class="userForm">
+            <div class="userForm reveal">
                 <form action="" class="form singup singupForm">
                     <div class="inputGroup">
                         <input type="text" placeholder="First name" autocomplete="offf">
