--- a/Html files/products.html
+++ b/Html files/products.html
@@ -19,7 +19,7 @@
             <li><a class="links" href="/Html files/about.html">About</a></li>
             <li><a class="links active" href="/Html files/products.html">Products</a></li>
             <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-            <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
+            <li><a class="link-icon" href="" onclick="shop()"><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
     </nav>
 
