some objects has been added and responsives have been modified

--- a/Html files/about.html
+++ b/Html files/about.html
@@ -12,20 +12,34 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/imagees/uno__1_-removebg-preview.png" alt="">
+            <h1 class="h-logo">UNO</h1>
         </div>
-        <ul>
-            <li><a class="links" href="/Html files/index.html">Home</a></li>
-            <li><a class="links active" href="/Html files/about.html">About</a></li>
-            <li><a class="links" href="/Html files/products.html">Products</a></li>
-            <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-            <li><a class="link-icon" href="" onclick="shop()"><img src="/imagees/shopping-cart.png" alt=""></a></li>
-        </ul>
+        <div id="navbar">
+            <ul>
+                <li><a class="links" href="/Html files/index.html">Home</a></li>
+                <li><a class="links active" href="/Html files/about.html">About</a></li>
+                <li><a class="links" href="/Html files/products.html">Products</a></li>
+                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
+
+        <div class="extra-nav">
+            <ul>
+                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
+                <li><a class="links active link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
+                <li><a class="links link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
     </nav>
 
     <header id="about-header">
         <h2>#About <strong>US</strong></h2>
     </header>
+
+
     <section id="main-about">
         <div class="picture reveal">
             
@@ -39,19 +53,17 @@
         </div>
     </section>
 
-    <section id="main2-about" >
-        <div class="picture2-contents reveal">
+    <section id="main2-about">
+        <div class="picture-contents reveal">
             <h3>Who are We</h3>
             <p><strong class="little reveal">UNO</strong> caters to thoughtful shoppers who appreciate unique designs and top quality pieces you just can’t find anywhere else. We are constantly curating fresh new collections and looking for the next big thing our customers will love. Founded in Tashkent in 2015, we are proud to be your Online Clothing Shop that you can rely on for our expert service and care.</p>
-            <div class="button">
+            <div class="button reveal">
                 <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
         </div>
-
-        <div class="info reveal">
-            <img src="/imagees/A former J_Crew exec just opened a menswear paradise for the modern guy who 'wants to look American'.jpg"alt="">
-        </div>
     </section>
+
+    
 
 
 
