--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -13,15 +13,27 @@
 
     <nav>
         <div class="logo">
-            <img src="/imagees/uno__1_-removebg-preview.png" alt="">
+            <h1 class="h-logo">UNO</h1>
         </div>
-        <ul>
-            <li><a class="links" href="/Html files/index.html">Home</a></li>
-            <li><a class="links" href="/Html files/about.html">About</a></li>
-            <li><a class="links" href="/Html files/products.html">Products</a></li>
-            <li><a class="links active" href="/Html files/contact.html">Log in</a></li>
-            <li><a class="link-icon" href="" onclick="shop()"><img src="/imagees/shopping-cart.png" alt=""></a></li>
-        </ul>
+        <div id="navbar">
+            <ul>
+                <li><a class="links" href="/Html files/index.html">Home</a></li>
+                <li><a class="links" href="/Html files/about.html">About</a></li>
+                <li><a class="links active" href="/Html files/products.html">Products</a></li>
+                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
+
+        <div class="extra-nav">
+            <ul>
+                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
+                <li><a class="links link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
+                <li><a class="links link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links active link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
     </nav>
 
 
