--- a/Html files/products.html
+++ b/Html files/products.html
@@ -12,15 +12,27 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/imagees/uno__1_-removebg-preview.png" alt="">
+            <h1 class="h-logo">UNO</h1>
         </div>
-        <ul>
-            <li><a class="links" href="/Html files/index.html">Home</a></li>
-            <li><a class="links" href="/Html files/about.html">About</a></li>
-            <li><a class="links active" href="/Html files/products.html">Products</a></li>
-            <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-            <li><a class="link-icon" href="" onclick="shop()"><img src="/imagees/shopping-cart.png" alt=""></a></li>
-        </ul>
+        <div id="navbar">
+            <ul>
+                <li><a class="links" href="/Html files/index.html">Home</a></li>
+                <li><a class="links" href="/Html files/about.html">About</a></li>
+                <li><a class="links active" href="/Html files/products.html">Products</a></li>
+                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
+
+        <div class="extra-nav">
+            <ul>
+                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
+                <li><a class="links link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
+                <li><a class="links active link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+            </ul>
+        </div>
     </nav>
 
     <header id="products-header">
@@ -51,31 +63,31 @@
 
         <div class="blogs">
            <div class="blogs-in">
-            <div class="blog1 reveal">
-                <h2 class="blog-heading">Sneakers</h2>
-                <a class="blog-link" href="https://www.instagram.com/p/CjetQEzKvo5/?igshid=YmMyMTA2M2Y=">Find</a>
-            </div>
+                <div class="blog1 reveal">
+                    <h2 class="blog-heading">Sneakers</h2>
+                    <a class="blog-link" href="https://www.instagram.com/p/CjetQEzKvo5/?igshid=YmMyMTA2M2Y=">Find</a>
+                </div>
 
-            <div class="blog2 reveal">
-                <h2 class="blog-heading">Coats</h2>
-                <a class="blog-link" href="https://www.instagram.com/p/Cjj7sb9qC1e/?igshid=YmMyMTA2M2Y=">Find</a>
-            </div>
+                <div class="blog2 reveal">
+                    <h2 class="blog-heading">Coats</h2>
+                    <a class="blog-link" href="https://www.instagram.com/p/Cjj7sb9qC1e/?igshid=YmMyMTA2M2Y=">Find</a>
+                </div>
 
-            <div class="blog3 reveal">
-                <h2 class="blog-heading">T-Shirts</h2>
-                <a class="blog-link" href="https://www.instagram.com/uno.mens.wear/">Find</a>
-            </div>
+                <div class="blog3 reveal">
+                    <h2 class="blog-heading">T-Shirts</h2>
+                    <a class="blog-link" href="https://www.instagram.com/uno.mens.wear/">Find</a>
+                </div>
 
-            <div class="blog4 reveal">
-                <h2 class="blog-heading">Shoes</h2>
-                <a class="blog-link" href="https://www.instagram.com/p/CiHMXkAqs2W/?igshid=YmMyMTA2M2Y=">Find</a>
-            </div>
+                <div class="blog4 reveal">
+                    <h2 class="blog-heading">Shoes</h2>
+                    <a class="blog-link" href="https://www.instagram.com/p/CiHMXkAqs2W/?igshid=YmMyMTA2M2Y=">Find</a>
+                </div>
            </div>
 
-            <div class="blog5 reveal">
+           <div class="blog5 reveal">
                 <h2 class="blog-heading">LimitedEditions</h2>
                 <a class="blog-link" href="https://www.instagram.com/p/Cg_OKt2qwZS/?igshid=YmMyMTA2M2Y=">Find</a>
-            </div>
+           </div>
         </div>
     </section>
 
