The project has been completed

--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a class="links" href="/Html files/index.html">Home</a></li>
                 <li><a class="links" href="/Html files/about.html">About</a></li>
-                <li><a class="links active" href="/Html files/products.html">Products</a></li>
-                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
+                <li><a class="links" href="/Html files/products.html">Products</a></li>
+                <li><a class="links active" href="/Html files/contact.html">Log in</a></li>
                 <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
@@ -41,25 +41,25 @@
 
     <header id="contact-header">
         <div class="contacts">
-            <div href="" class="elements">
+            <div href="" class="elements reveal">
                 <i><img src="/imagees/maps-and-flags.png" alt=""></i>
                 <h2>Our main branch</h2>
                 <p><a href="https://goo.gl/maps/AYZsexJtyqRmm8Y66">4 Farhod ko'chasi, Тошкент 100097</a></p>
             </div>
 
-            <div class="elements">
+            <div class="elements reveal">
                 <i><img src="/imagees/phone-call.png" alt=""></i>
                 <h2>Phone number</h2>
                 <p><a href="">+998(97) 100-63-63</a></p>
             </div>
 
-            <div href="https://www.instagram.com/uno.mens.wear/" class="elements">
+            <div href="https://www.instagram.com/uno.mens.wear/" class="elements reveal">
                 <i><img src="/imagees/instagram.png" alt=""></i>
                 <h2>Our Instagram</h2>
                 <p><a href="https://www.instagram.com/uno.mens.wear/">@uno.mens.wear</a></p>
             </div>
 
-            <div href="https://t.me/UnoMensWear" class="elements">
+            <div href="https://t.me/UnoMensWear" class="elements reveal">
                 <i><img src="/imagees/telegram.png" alt=""></i>
                 <h2>Our telegram</h2>
                 <p><a href="https://t.me/UnoMensWear">t.me/UnoMensWear</a></p>
@@ -115,7 +115,7 @@
             <h3 class="reveal">Find us on Map</h3>
         </div>
         <div class="map-element">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11994.136316992279!2d69.2040674!3d41.2754795!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x574588d25a82b1e1!2sUno%20Mens%20Wear!5e0!3m2!1sru!2s!4v1668669467906!5m2!1sru!2s" width="900" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="reveal" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11994.136316992279!2d69.2040674!3d41.2754795!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x574588d25a82b1e1!2sUno%20Mens%20Wear!5e0!3m2!1sru!2s!4v1668669467906!5m2!1sru!2s" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
