--- a/Html files/index.html
+++ b/Html files/index.html
@@ -38,7 +38,7 @@
     <header id="main-header">
         <div class="contents reveal">
             <h1>Welcome to <strong>UNO</strong></h1>
-            <p>Looking good isn't self-importance; it's self-respect</p>
+            <p>Looking good is not self-importance, it is self-respect.</p>
             <div class="button">
                 <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
