--- a/Html files/shop.html
+++ b/Html files/shop.html
@@ -19,9 +19,9 @@
             <ul>
                 <li><a class="links" href="/Html files/index.html">Home</a></li>
                 <li><a class="links" href="/Html files/about.html">About</a></li>
-                <li><a class="links active" href="/Html files/products.html">Products</a></li>
+                <li><a class="links" href="/Html files/products.html">Products</a></li>
                 <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a onclick="shop()" class="link-icon active" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
 
